--- a/src/css/components/steps/step-3.styl
+++ b/src/css/components/steps/step-3.styl
@@ -53,10 +53,10 @@
 
       &.\\+left
         text-align right
-        margin-left (540 / 1200) * -100%
+        // margin-left (540 / 1200) * -100%
 
-      &.\\+right
-        margin-left (300 / 1200) * 100%
+      // &.\\+right
+      //   margin-left (300 / 1200) * 100%
 
   &.is-step-3 #step-3
 
@@ -100,13 +100,13 @@
         margin-bottom 0
         // margin-bottom -315px
 
-@media all and (min-width 1000px)
-  #step-3
+// @media all and (min-width 1000px)
+//   #step-3
 
-    .small-text
+//     .small-text
 
-      &.\\+left
-        margin-left ((280 + 140) / 1200) * -100%
+//       &.\\+left
+//         margin-left ((280 + 140) / 1200) * -100%
 
 
 
