--- a/src/css/components/steps/step-4.styl
+++ b/src/css/components/steps/step-4.styl
@@ -59,7 +59,26 @@
     .splash__headline
       transform translate3d(0, -5vh, 0)
 
+  #step-4
+    .small-text
 
+      &.\\+left
+        text-align right
+        margin-left -15%
+
+      &.\\+right
+        margin-left 40%
+
+@media all and (min-width 1100px)
+  #step-4
+    .small-text
+
+      &.\\+left
+        text-align right
+        margin-left -12%
+
+      &.\\+right
+        margin-left 45%
 
 
 
