--- a/src/css/components/steps/step-5.styl
+++ b/src/css/components/steps/step-5.styl
@@ -60,10 +60,10 @@
     .small-text
 
       &.\\+left
-        margin-left ((270 + 155) / 1200) * -100%
+        margin-left -5%
 
       &.\\+right
-        margin-left (120/1200) * 100%
+        margin-left 35%
 
   &.is-step-5 #step-5
     .splash__headline
@@ -72,12 +72,12 @@
       // transform translate3d(0, 15vh, 0)
       // bottom 40%
 
-@media all and (min-width 1050px)
-  #step-5
-    .small-text
+// @media all and (min-width 1050px)
+//   #step-5
+//     .small-text
 
-      &.\\+left
-        margin-left ((200 + 155) / 1200) * -100%
+//       &.\\+left
+//         margin-left ((200 + 155) / 1200) * -100%
 
 
 
